Notes Add button and Content Card Added

--- a/frontend/EasyNotes/src/index.css
+++ b/frontend/EasyNotes/src/index.css
@@ -25,4 +25,7 @@
   .icon-btn {
     @apply text-xl text-slate-400 cursor-pointer hover:text-primary;
   }
+  .input-label {
+    @apply text-xs text-slate-400;
+  }
 }
